Add welcome message

--- a/homepage.html
+++ b/homepage.html
@@ -6,6 +6,9 @@
     <title>Yoon's Portfolio</title>
 </head>
 <body>
+    <h1>Welcome to Yoon's page</h1>
+    <br><br>
+
     <h1>1. Technology used</h1>
     <ul>
         <li>C/C++ - middle-low; can solve a few coding problems.</li>
